# voiceasistant

./: .gitignore  CLAUDE.md  SETUP.md  bot.py  mic_probe.py  pyproject.toml
ops/ollama/: llama3.1-ctx4k.Modelfile
voiceassistant/: __init__.py  audio_devices.py  config.py  llm_factory.py  personas.py  pipeline.py  preload.py  runner.py  session.py
voiceassistant/memory/: __init__.py  build_index.py  embeddings.py  index.py  librarian_llm.py
voiceassistant/processors/: __init__.py  speech_logger.py  vector_retrieval.py  voice_effect.py  wiki_librarian.py  wiki_retrieval.py
voiceassistant/routing/: __init__.py  router.py
voiceassistant/tools/: __init__.py  memory_search.py  registry.py  save_note.py  web_search.py
voiceassistant/transports/: __init__.py  local_audio.py  text.py
voiceassistant/wiki/: librarian.py  paths.py  retriever.py  store.py
wiki_templates/: index.md  routing.md  schema.md
wiki_templates/devices/: laptop.md  stdin.md
wiki_templates/people/: emma.md  maikel.md
wiki_templates/personas/: bunny.md  default.md  es.md
